--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "3.0", features = ["derive"] }
 serde = {version = "1.0", features = ["derive"]}
 bincode = "1.3"
 anyhow = "1.0"
+crc = "2.1"
