--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ serde = {version = "1.0", features = ["derive"]}
 bincode = "1.3"
 anyhow = "1.0"
 crc = "1"
+rand = "0.8"
+rand_chacha = "0.3"
+rand_hc = "0.3"
