--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 clap = { version = "3.0", features = ["derive"] }
 serde = {version = "1.0", features = ["derive"]}
 bincode = "1.3"
+serde_json = "1.0"
 anyhow = "1.0"
 crc = "1"
 rand = "0.8"
