--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.0", features = ["derive"] }
-serde = {version = "1.0", features = ["derive"]}
-bincode = "1.3"
-serde_json = "1.0"
-anyhow = "1.0"
-crc = "1"
-rand = "0.8"
-rand_chacha = "0.3"
-rand_hc = "0.3"
+clap = { version = "3", features = ["derive"] }
+serde = {version = "1", features = ["derive"]}
+bincode = "1"
+serde_json = "1"
+anyhow = "1"
+crc = "1" # (old version)
+rand = "0"
+rand_chacha = "0"
+rand_hc = "0"
